--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "CC0-1.0",
   "scripts": {
     "build": "webpack --mode production",
-    "build:dev": "webpack --watch --mode development",
+    "build:dev": "webpack --mode development",
+    "build:watch": "npm run build:dev -- --watch",
     "clean": "rm -rf _site",
     "serve": "anywhere -p 8080 -d ./_site"
   },
@@ -26,10 +27,14 @@
     "anywhere": "1.5.0",
     "color-sorter": "4.0.1",
     "copy-webpack-plugin": "7.0.0",
+    "css-loader": "5.0.1",
+    "css-minimizer-webpack-plugin": "1.1.5",
     "get-relative-luminance": "1.0.0",
     "html-webpack-plugin": "5.0.0-beta.1",
+    "mini-css-extract-plugin": "1.3.3",
     "pug": "3.0.0",
     "pug-loader": "2.4.0",
+    "svg-url-loader": "7.1.1",
     "webpack-cli": "4.2.0"
   }
 }
