--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,12 @@
 
 # Don't diff machine generated files
 package-lock.json  -diff
+
+# Treat images as binary
+*.ico              binary
+*.png              binary
+
+# Don't export/archive these files
+.github            export-ignore
+.gitpod.yml        export-ignore
+CNAME              export-ignore
