--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "build:watch": "npm run build:dev -- --watch",
-    "clean": "rm -rf _site",
-    "serve": "anywhere -p 8080 -d ./_site"
+    "clean": "rm -rf _site tests/_artifacts",
+    "pretest": "npm run clean && npm run build:dev",
+    "serve": "anywhere -p 8080 -d ./_site",
+    "test": "jest"
   },
   "dependencies": {
     "simple-icons": "4.3.0",
@@ -31,9 +33,12 @@
     "css-minimizer-webpack-plugin": "1.1.5",
     "get-relative-luminance": "1.0.0",
     "html-webpack-plugin": "5.0.0-beta.1",
+    "jest": "26.6.3",
+    "jest-puppeteer": "4.4.0",
     "mini-css-extract-plugin": "1.3.3",
     "pug": "3.0.0",
     "pug-loader": "2.4.0",
+    "puppeteer": "5.5.0",
     "svg-url-loader": "7.1.1",
     "webpack-cli": "4.2.0"
   }
