--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "simple-icons": "4.3.0",
-    "webpack": "5.11.0"
+    "simple-icons": "4.3.0"
   },
   "devDependencies": {
     "anywhere": "1.5.0",
@@ -40,6 +39,7 @@
     "pug-loader": "2.4.0",
     "puppeteer": "5.5.0",
     "svg-url-loader": "7.1.1",
+    "webpack": "5.11.0",
     "webpack-cli": "4.2.0"
   }
 }
