Add simple-icons-pdf as dependency

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "simple-icons": "4.3.0"
+    "simple-icons": "4.3.0",
+    "simple-icons-pdf": "https://github.com/simple-icons/simple-icons-pdf/tarball/master"
   },
   "devDependencies": {
     "anywhere": "1.5.0",
