--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -34,4 +34,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: preview
-        path: tests/_artifacts/
+        path: tests/_artifacts/*.png
