--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "anywhere": "1.5.0",
+    "autoprefixer": "10.1.0",
     "color-sorter": "4.0.1",
     "copy-webpack-plugin": "7.0.0",
     "css-loader": "5.0.1",
@@ -36,6 +37,9 @@
     "jest": "26.6.3",
     "jest-puppeteer": "4.4.0",
     "mini-css-extract-plugin": "1.3.3",
+    "postcss": "8.2.2",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-loader": "4.1.0",
     "pug": "3.0.0",
     "pug-loader": "2.4.0",
     "puppeteer": "5.5.0",
