--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "simple-icons-pdf": "https://github.com/simple-icons/simple-icons-pdf/tarball/master"
   },
   "devDependencies": {
+    "@babel/core": "7.12.10",
+    "@babel/preset-env": "7.12.11",
     "anywhere": "1.5.0",
     "autoprefixer": "10.2.1",
+    "babel-jest": "26.6.3",
     "color-sorter": "4.0.1",
     "copy-webpack-plugin": "7.0.0",
     "css-loader": "5.0.1",
