--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,14 +1,33 @@
 {
   extends: [
-    "config:base",
+    'config:base',
 
     // Make sure we get a single PR combining all updates
-    "group:all",
+    'group:all',
   ],
 
   // We will keep simple-icons up-to-date separately from renovate
-  ignoreDeps: ["simple-icons"],
+  ignoreDeps: ['simple-icons'],
+
+  lockFileMaintenance: {
+    extends: [
+      // Make sure we get a single PR combining all updates
+      'group:all',
+    ],
+
+    // Explicitly enable lockfile maintenance
+    enabled: true,
+
+    // This schedule should be the same as the general schedule!
+    schedule: 'on the 2nd and 4th day instance on sunday after 11pm',
+  },
 
   // Use our labelling system
-  labels: ["dependencies"],
+  labels: ['dependencies'],
+
+  // Schedule the PRs to interleave with our release schedule
+  schedule: 'on the 2nd and 4th day instance on sunday after 11pm',
+
+  // We generally always want the major version
+  separateMajorMinor: false,
 }
