--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -6,32 +6,46 @@ jobs:
     name: Build website
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Use Node.js 12.x
-      uses: actions/setup-node@v2
-      with:
-        node-version: 12.x
-    - name: Install dependencies
-      run: npm ci
-    - name: Build website
-      run: npm run build
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 12.x
+      - name: Install dependencies
+        run: npm ci
+      - name: Build website
+        run: npm run build
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 12.x
+      - name: Install dependencies
+        run: npm ci
+      - name: Run linter
+        run: npm run lint
   test:
     name: Test website
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Use Node.js 12.x
-      uses: actions/setup-node@v2
-      with:
-        node-version: 12.x
-    - name: Install dependencies
-      run: npm ci
-    - name: Run tests
-      run: npm run test
-    - name: Upload test screenshots
-      uses: actions/upload-artifact@v2
-      with:
-        name: preview
-        path: tests/_artifacts/*.png
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 12.x
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm run test
+      - name: Upload test screenshots
+        uses: actions/upload-artifact@v2
+        with:
+          name: preview
+          path: tests/_artifacts/*.png
