--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "build:dev": "webpack --mode development",
     "build:watch": "npm run build:dev -- --watch",
     "clean": "rm -rf _site tests/_artifacts",
+    "format": "prettier --write --single-quote --trailing-comma all .",
+    "lint": "prettier --check --single-quote --trailing-comma all .",
+    "postinstall": "is-ci || husky install",
     "pretest": "npm run clean && npm run build:dev",
     "serve": "anywhere -p 8080 -d ./_site",
     "test": "jest"
@@ -37,12 +40,15 @@
     "css-minimizer-webpack-plugin": "1.2.0",
     "get-relative-luminance": "1.0.0",
     "html-webpack-plugin": "5.0.0-beta.5",
+    "husky": "5.0.6",
+    "is-ci": "2.0.0",
     "jest": "26.6.3",
     "jest-puppeteer": "4.4.0",
     "mini-css-extract-plugin": "1.3.4",
     "postcss": "8.2.4",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-loader": "4.1.0",
+    "prettier": "2.2.1",
     "pug": "3.0.0",
     "pug-loader": "2.4.0",
     "puppeteer": "5.5.0",
