--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postinstall": "is-ci || husky install",
     "pretest": "npm run clean && npm run build:dev",
     "serve": "anywhere -p 8080 -d ./_site",
+    "serve:watch": "run-p build:watch serve",
     "test": "jest"
   },
   "dependencies": {
@@ -45,6 +46,7 @@
     "jest": "26.6.3",
     "jest-puppeteer": "4.4.0",
     "mini-css-extract-plugin": "1.3.4",
+    "npm-run-all": "4.1.5",
     "postcss": "8.2.4",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-loader": "4.1.0",
