Add script to run unit tests only
To be able to easily an quickly run unit tests without having to wait
for integration tests.

Also updated the Contributing Guidelines and CI configuration
accordingly.

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run tests
-        run: npm run test
+        run: npm run test:all
       - name: Upload test screenshots
         uses: actions/upload-artifact@v2
         with:
