--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "CC0-1.0",
   "scripts": {
     "build": "webpack --mode production",
-    "postbuild": "webmangler --write _site/",
+    "postbuild": "webmangler --write --stats -vv _site/",
     "build:dev": "webpack --mode development",
     "build:watch": "npm run build:dev -- --watch",
     "clean": "rm -rf _site tests/_artifacts",
@@ -56,8 +56,8 @@
     "pug-loader": "2.4.0",
     "puppeteer": "5.5.0",
     "svg-url-loader": "7.1.1",
-    "webmangler": "0.1.4",
-    "webmangler-cli": "0.1.1",
+    "webmangler": "0.1.9",
+    "webmangler-cli": "0.1.3",
     "webpack": "5.15.0",
     "webpack-cli": "4.3.1"
   },
