--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -60,6 +60,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 12.x
+      - name: Get Date
+        id: get-date
+        run: echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
       - name: Cache dependencies
         uses: actions/cache@v2
         with:
@@ -72,6 +75,14 @@ jobs:
         with:
           path: .cache/webpack
           key: ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}
+      - name: Cache Jest
+        uses: actions/cache@v2
+        with:
+          path: .cache/jest
+          key: ${{ runner.os }}-jest-${{ hashFiles('package-lock.json') }}-${{ steps.get-date.outputs.date }}
+          restore-keys: |
+            ${{ runner.os }}-jest-${{ hashFiles('package-lock.json') }}-
+            ${{ runner.os }}-jest-
       - name: Install dependencies
         run: npm ci
       - name: Run unit tests
