--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -88,8 +88,8 @@ jobs:
         run: npm ci
       - name: Run unit tests
         run: npm run test:unit
-      - name: Run integration tests
-        run: npm run test:integration -- --runInBand
+      - name: Run end-to-end tests
+        run: npm run test:e2e -- --runInBand
       - name: Upload test screenshots
         uses: actions/upload-artifact@v2
         with:
