--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -23,10 +23,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js 12.x
+      - name: Use Node.js 16
         uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: 16
       - name: Install dependencies
         run: npm ci
       - name: Build website
