Disable Renovate dependency dashboard

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -6,6 +6,8 @@
     'group:all',
   ],
 
+  dependencyDashboard: false,
+
   // We will keep simple-icons up-to-date separately from renovate
   ignoreDeps: ['simple-icons'],
 
