--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,10 +1,10 @@
 contact_links:
   - name: Icon request
-    about: Request a new icon for SimpleIcons
-    url: https://github.com/simple-icons/simple-icons/issues/new?labels=new+icon&template=icon_request.md
+    about: Request a new icon for Simple Icons
+    url: https://github.com/simple-icons/simple-icons/issues/new?labels=new+icon&template=icon_request.yml&title=Request%3A+
   - name: Icon update
     about: Help us improve by reporting outdated icons
-    url: https://github.com/simple-icons/simple-icons/issues/new?labels=icon+outdated&template=icon_update.md
+    url: https://github.com/simple-icons/simple-icons/issues/new?labels=icon+outdated&template=icon_update.yml&title=Update%3A+
   - name: Packages
     about: Issues and improvements for the packages
-    url: https://github.com/simple-icons/simple-icons/issues/new?labels=package&template=package.md
+    url: https://github.com/simple-icons/simple-icons/issues/new?labels=package&template=package.yml
