added fast-fuzzy package to improve / fix bugs in fuzzy searching in the website

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "test:unit": "cross-env TEST_ENV=unit jest"
   },
   "dependencies": {
+    "fast-fuzzy": "1.10.10",
+    "graphemesplit": "2.4.4",
     "simple-icons": "5.19.0"
   },
   "devDependencies": {
