--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "test:unit": "cross-env TEST_ENV=unit jest"
   },
   "dependencies": {
-    "simple-icons": "5.19.0",
-    "sync-fetch": "0.3.1"
+    "simple-icons": "5.19.0"
   },
   "devDependencies": {
     "@babel/core": "7.15.8",
