Add prettier configuration file

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:dev": "webpack --mode development",
     "build:watch": "npm run build:dev -- --watch",
     "clean": "rm -rf _site tests/_artifacts",
-    "format": "prettier --write --single-quote --trailing-comma all .",
+    "format": "prettier --write .",
     "lint": "prettier --check --single-quote --trailing-comma all .",
     "postinstall": "run-s setup:husky setup:pdfs",
     "serve": "anywhere -p 8080 -d ./_site",
