Test embedded icons optimization with simple-icons SVGO config

--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "clean": "rimraf _site tests/_artifacts",
     "format": "prettier --write .",
     "lint": "prettier --check .",
-    "postinstall": "run-s setup:husky setup:pdfs",
+    "postinstall": "run-s setup:husky setup:pdfs setup:si-svgo-config",
     "serve": "anywhere -p 8080 -d ./_site",
     "serve:watch": "run-p build:watch serve",
     "setup:husky": "is-ci || husky install",
     "setup:pdfs": "npm install https://github.com/simple-icons/simple-icons-pdf/tarball/master --no-save",
+    "setup:si-svgo-config": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/svgo.config.js node_modules/simple-icons/svgo.config.js",
     "test": "npm run test:unit",
     "test:all": "cross-env TEST_ENV=all jest",
     "test:e2e": "cross-env TEST_ENV=e2e jest",
@@ -55,9 +56,12 @@
     "postcss-loader": "6.2.0",
     "prettier": "2.4.1",
     "pug": "3.0.2",
+    "pug-lexer": "5.0.1",
     "pug-loader": "2.4.0",
     "puppeteer": "10.4.0",
     "rimraf": "3.0.2",
+    "sdown": "1.0.2",
+    "svgo": "2.8.0",
     "webpack": "5.60.0",
     "webpack-cli": "4.9.1"
   },
