--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "webpack": "5.60.0",
     "webpack-cli": "4.9.1"
   },
-  "engine": {
-    "node": ">=12.16.0"
+  "engines": {
+    "node": ">=12.16.0",
+    "npm": "<7.0.0 || >=8.1.2"
   }
 }
