--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -20,6 +20,10 @@ jobs:
           ref: master
           # Ensure custom credentials are used when pushing
           persist-credentials: false
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 12.x
       - name: Update simple-icons
         id: update
         run: |
