--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,10 +12,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
-      - name: Use Node.js 12.x
+      - name: Use Node.js 16.x
         uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: 16.x
       - name: Cache dependencies
         uses: actions/cache@v2
         with:
@@ -35,7 +35,7 @@ jobs:
       - name: Build Website
         run: npm run build
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.2.1
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: _site
