--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "clean": "rimraf _site tests/_artifacts",
     "format": "prettier --write .",
     "lint": "prettier --check .",
-    "postinstall": "run-s setup:husky setup:pdfs setup:si-svgo-config",
+    "postinstall": "run-s setup:husky setup:pdfs setup:si-utils setup:si-svgo-config",
     "serve": "anywhere -p 8080 -d ./_site",
     "serve:watch": "run-p build:watch serve",
     "setup:husky": "is-ci || husky install",
     "setup:pdfs": "npm install https://github.com/simple-icons/simple-icons-pdf/tarball/master --no-save",
+    "setup:si-utils": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/scripts/utils.js si-utils.js",
     "setup:si-svgo-config": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/svgo.config.js node_modules/simple-icons/svgo.config.js",
     "test": "npm run test:unit",
     "test:all": "cross-env TEST_ENV=all jest",
@@ -67,8 +68,9 @@
     "webpack": "5.70.0",
     "webpack-cli": "4.9.2"
   },
+  "type": "module",
   "engines": {
-    "node": ">=12.16.0",
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0",
     "npm": "<7.0.0 || >=8.1.2"
   }
 }
