--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "serve:watch": "run-p build:watch serve",
     "setup:husky": "is-ci || husky install",
     "setup:pdfs": "npm install https://github.com/simple-icons/simple-icons-pdf/tarball/master --no-save",
-    "setup:si-utils": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/scripts/utils.js si-utils.js",
+    "setup:si-utils": "sdown https://raw.githubusercontent.com/mondeja/simple-icons/reuse-utils/scripts/utils.js si-utils.js",
     "setup:si-svgo-config": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/svgo.config.js node_modules/simple-icons/svgo.config.js",
     "test": "npm run test:unit",
-    "test:all": "cross-env TEST_ENV=all jest",
-    "test:e2e": "cross-env TEST_ENV=e2e jest",
-    "test:unit": "cross-env TEST_ENV=unit jest"
+    "test:all": "cross-env NODE_OPTIONS=--experimental-vm-modules TEST_ENV=all jest",
+    "test:e2e": "cross-env NODE_OPTIONS=--experimental-vm-modules TEST_ENV=e2e jest",
+    "test:unit": "cross-env NODE_OPTIONS=--experimental-vm-modules TEST_ENV=unit jest"
   },
   "dependencies": {
     "fast-fuzzy": "1.11.1",
