--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   },
   "author": "Simple Icons Collaborators",
   "license": "CC0-1.0",
+  "type": "module",
+  "engines": {
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0",
+    "npm": "<7.0.0 || >=8.1.2"
+  },
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
@@ -28,7 +33,7 @@
     "setup:si-svgo-config": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/svgo.config.js node_modules/simple-icons/svgo.config.js",
     "test": "npm run test:unit",
     "test:all": "cross-env NODE_OPTIONS=--experimental-vm-modules TEST_ENV=all jest",
-    "test:e2e": "cross-env NODE_OPTIONS=--experimental-vm-modules TEST_ENV=e2e jest",
+    "test:e2e": "cross-env NODE_OPTIONS=--experimental-vm-modules JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs TEST_ENV=e2e jest",
     "test:unit": "cross-env NODE_OPTIONS=--experimental-vm-modules TEST_ENV=unit jest"
   },
   "dependencies": {
@@ -36,8 +41,6 @@
     "simple-icons": "6.19.0"
   },
   "devDependencies": {
-    "@babel/core": "7.17.8",
-    "@babel/preset-env": "7.16.11",
     "@prettier/plugin-pug": "1.20.0",
     "anywhere": "1.5.0",
     "autoprefixer": "10.4.4",
@@ -67,10 +70,5 @@
     "svgo": "2.8.0",
     "webpack": "5.70.0",
     "webpack-cli": "4.9.2"
-  },
-  "type": "module",
-  "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0",
-    "npm": "<7.0.0 || >=8.1.2"
   }
 }
