--- a/package.json
+++ b/package.json
@@ -24,16 +24,15 @@
     "clean": "rimraf _site tests/_artifacts",
     "format": "prettier --write .",
     "lint": "prettier --check .",
-    "postinstall": "run-s setup:husky setup:pdfs setup:si-utils setup:si-svgo-config",
+    "postinstall": "run-s setup:husky setup:pdfs setup:si-utils",
     "serve": "anywhere -p 8080 -d ./_site",
     "serve:watch": "run-p build:watch serve",
     "setup:husky": "is-ci || husky install",
     "setup:pdfs": "npm install https://github.com/simple-icons/simple-icons-pdf/tarball/master --no-save",
     "setup:si-utils": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/scripts/utils.js si-utils.js",
-    "setup:si-svgo-config": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/svgo.config.js node_modules/simple-icons/svgo.config.js",
     "test": "npm run test:unit",
-    "test:all": "cross-env NODE_OPTIONS=--experimental-vm-modules TEST_ENV=all jest",
-    "test:e2e": "cross-env NODE_OPTIONS=--experimental-vm-modules JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs TEST_ENV=e2e jest",
+    "test:all": "cross-env NODE_OPTIONS=--experimental-vm-modules JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs TEST_ENV=all jest --detectOpenHandles",
+    "test:e2e": "cross-env NODE_OPTIONS=--experimental-vm-modules JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs TEST_ENV=e2e jest --detectOpenHandles",
     "test:unit": "cross-env NODE_OPTIONS=--experimental-vm-modules TEST_ENV=unit jest"
   },
   "dependencies": {
