--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   },
   "author": "Simple Icons Collaborators",
   "license": "CC0-1.0",
+  "type": "module",
+  "engines": {
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0",
+    "npm": "<7.0.0 || >=8.1.2"
+  },
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
@@ -19,28 +24,25 @@
     "clean": "rimraf _site tests/_artifacts",
     "format": "prettier --write .",
     "lint": "prettier --check .",
-    "postinstall": "run-s setup:husky setup:pdfs setup:si-svgo-config",
+    "postinstall": "run-s setup:husky setup:pdfs setup:si-utils",
     "serve": "anywhere -p 8080 -d ./_site",
     "serve:watch": "run-p build:watch serve",
     "setup:husky": "is-ci || husky install",
     "setup:pdfs": "npm install https://github.com/simple-icons/simple-icons-pdf/tarball/master --no-save",
-    "setup:si-svgo-config": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/svgo.config.js node_modules/simple-icons/svgo.config.js",
+    "setup:si-utils": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/scripts/utils.js si-utils.js",
     "test": "npm run test:unit",
-    "test:all": "cross-env TEST_ENV=all jest",
-    "test:e2e": "cross-env TEST_ENV=e2e jest",
-    "test:unit": "cross-env TEST_ENV=unit jest"
+    "test:all": "cross-env NODE_OPTIONS=--experimental-vm-modules JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs TEST_ENV=all jest --detectOpenHandles",
+    "test:e2e": "cross-env NODE_OPTIONS=--experimental-vm-modules JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs TEST_ENV=e2e jest --detectOpenHandles",
+    "test:unit": "cross-env NODE_OPTIONS=--experimental-vm-modules TEST_ENV=unit jest"
   },
   "dependencies": {
     "fast-fuzzy": "1.11.1",
     "simple-icons": "6.20.0"
   },
   "devDependencies": {
-    "@babel/core": "7.17.8",
-    "@babel/preset-env": "7.16.11",
     "@prettier/plugin-pug": "1.20.0",
     "anywhere": "1.5.0",
     "autoprefixer": "10.4.4",
-    "babel-jest": "27.5.1",
     "copy-webpack-plugin": "10.2.4",
     "cross-env": "7.0.3",
     "css-loader": "6.7.1",
@@ -66,9 +68,5 @@
     "svgo": "2.8.0",
     "webpack": "5.70.0",
     "webpack-cli": "4.9.2"
-  },
-  "engines": {
-    "node": ">=12.16.0",
-    "npm": "<7.0.0 || >=8.1.2"
   }
 }
