--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -24,6 +24,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
+      - name: Download utils file
+        run: |
+          npm i sdown -g
+          npm run setup:si-utils
       - name: Update simple-icons
         id: update
         run: |
