--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "CC0-1.0",
   "type": "module",
   "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0",
+    "node": "^14.15.0 || >=16.0.0",
     "npm": "<7.0.0 || >=8.1.2"
   },
   "scripts": {
