--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "test": "npm run test:unit",
     "test:all": "cross-env NODE_OPTIONS=--experimental-vm-modules JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs TEST_ENV=all jest --detectOpenHandles",
     "test:e2e": "cross-env NODE_OPTIONS=--experimental-vm-modules JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs TEST_ENV=e2e jest --detectOpenHandles",
-    "test:unit": "cross-env NODE_OPTIONS=--experimental-vm-modules TEST_ENV=unit jest"
+    "test:unit": "cross-env NODE_OPTIONS=--experimental-vm-modules TEST_ENV=unit jest",
+    "locale": "node scripts/i18n.js"
   },
   "dependencies": {
     "fast-fuzzy": "1.11.2",
@@ -56,6 +57,7 @@
     "jest-puppeteer": "6.1.1",
     "mini-css-extract-plugin": "2.6.1",
     "npm-run-all": "4.1.5",
+    "pofile": "1.1.3",
     "postcss": "8.4.16",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-loader": "7.0.1",
