--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "build:dev": "webpack --mode development",
     "build:watch": "npm run build:dev -- --watch",
     "clean": "rimraf _site tests/_artifacts",
-    "format": "prettier --write .",
-    "lint": "prettier --check .",
+    "format": "prettier --write . && eslint . --fix",
+    "lint": "prettier --check . && eslint .",
     "postinstall": "run-s setup:husky setup:pdfs setup:si-utils",
     "serve": "anywhere -p 8080 -d ./_site",
     "serve:watch": "run-p build:watch serve",
@@ -49,6 +49,9 @@
     "cross-env": "7.0.3",
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "4.1.0",
+    "eslint": "8.24.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
     "get-relative-luminance": "1.0.0",
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.1",
