--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches: [master]
 
+permissions:
+  contents: read
+  pages: write
+
 jobs:
   publish-website:
     runs-on: ubuntu-latest
