Use common Simple Icons ESLint configuration (#232)
* Use common Simple Icons ESLint configuration

* Update eslint-config-simple-icons version

--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "4.1.0",
     "eslint": "8.24.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint-config-simple-icons": "0.1.1",
     "get-relative-luminance": "1.0.0",
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.1",
