Fix error using simple-icons utilities

--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "clean": "rimraf _site tests/_artifacts",
     "format": "prettier --write . && eslint . --fix",
     "lint": "prettier --check . && eslint .",
-    "postinstall": "run-s setup:husky setup:pdfs setup:si-utils",
+    "postinstall": "run-s setup:husky setup:pdfs setup:si-utils setup:si-readme",
     "serve": "anywhere -p 8080 -d ./_site",
     "serve:watch": "run-p build:watch serve",
     "setup:husky": "is-ci || husky install",
     "setup:pdfs": "npm install https://github.com/simple-icons/simple-icons-pdf/tarball/master --no-save",
     "setup:si-utils": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/scripts/utils.js si-utils.js",
+    "setup:si-readme": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/README.md node_modules/simple-icons/README.md",
     "test": "npm run test:unit",
     "test:all": "cross-env NODE_OPTIONS=--experimental-vm-modules JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs TEST_ENV=all jest --detectOpenHandles",
     "test:e2e": "cross-env NODE_OPTIONS=--experimental-vm-modules JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs TEST_ENV=e2e jest --detectOpenHandles",
