--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
     "clean": "rimraf _site tests/_artifacts",
     "format": "prettier --write . && eslint . --fix",
     "lint": "prettier --check . && eslint .",
-    "postinstall": "run-s setup:husky setup:pdfs setup:si-utils setup:si-readme",
+    "postinstall": "run-s setup:husky setup:si-utils setup:si-readme",
     "serve": "anywhere -p 8080 -d ./_site",
     "serve:watch": "run-p build:watch serve",
     "setup:husky": "is-ci || husky install",
-    "setup:pdfs": "npm install https://github.com/simple-icons/simple-icons-pdf/tarball/master --no-save",
     "setup:si-utils": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/scripts/utils.js si-utils.js",
     "setup:si-readme": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/README.md node_modules/simple-icons/README.md",
     "test": "npm run test:unit",
@@ -38,7 +37,9 @@
     "locale": "node scripts/i18n.js"
   },
   "dependencies": {
+    "blob-stream": "0.1.3",
     "fast-fuzzy": "1.12.0",
+    "pdfkit": "0.13.0",
     "simple-icons": "8.9.0"
   },
   "devDependencies": {
