--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
   "dependencies": {
     "blob-stream": "0.1.3",
     "fast-fuzzy": "1.12.0",
-    "pdfkit": "0.13.0",
-    "simple-icons": "8.12.0"
+    "pdfkit": "0.13.0"
   },
   "devDependencies": {
     "@prettier/plugin-pug": "2.4.2",
@@ -68,6 +67,7 @@
     "pug-loader": "2.4.0",
     "puppeteer": "19.8.3",
     "rimraf": "4.4.1",
+    "simple-icons": "8.12.1",
     "svgo": "3.0.2",
     "webpack": "5.77.0",
     "webpack-cli": "5.0.1"
