--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "format": "prettier --write . && eslint . --fix",
     "lint": "prettier --check . && eslint .",
     "postinstall": "is-ci || husky install",
-    "serve": "anywhere -p 8080 -d ./_site",
+    "serve": "serve -p 8080 ./_site",
     "serve:watch": "run-p build:watch serve",
     "test": "npm run test:unit",
     "test:all": "cross-env NODE_OPTIONS=--experimental-vm-modules TEST_ENV=all jest --detectOpenHandles",
@@ -41,7 +41,6 @@
   "devDependencies": {
     "@prettier/plugin-pug": "3.0.0",
     "@prettier/plugin-xml": "3.2.2",
-    "anywhere": "1.6.0",
     "autoprefixer": "10.4.16",
     "copy-webpack-plugin": "11.0.0",
     "cross-env": "7.0.3",
@@ -67,6 +66,7 @@
     "pug-lexer": "5.0.1",
     "pug-loader": "2.4.0",
     "puppeteer": "21.6.1",
+    "serve": "14.2.1",
     "simple-icons": "10.4.0",
     "svgo": "3.1.0",
     "webpack": "5.89.0",
