--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -65,6 +65,8 @@ jobs:
         with:
           app-id: ${{ vars.BOT_APP_ID }}
           private-key: ${{ secrets.BOT_PRIVATE_KEY }}
+          owner: 'simple-icons'
+          repositories: 'simple-icons,simple-icons-website'
       - name: Checkout
         uses: actions/checkout@v4
       - name: Use Node.js 20.x
@@ -98,9 +100,9 @@ jobs:
       - name: Run unit tests
         run: npm run test:unit
       - name: Run end-to-end tests
-        run: npm run test:e2e -- --runInBand
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+        run: npm run test:e2e -- --runInBand
       - name: Upload test screenshots
         uses: actions/upload-artifact@v4
         with:
