--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "build:dev": "webpack --mode development",
     "build:watch": "npm run build:dev -- --watch",
     "clean": "del-cli _site tests/_artifacts",
-    "prettier": "prettier --ignore-unknown \"**/*.!(js|jsx|mjs|cjs|ts|tsx|mts|cts)\"",
-    "format": "npm run prettier -- --write . && xo --fix",
-    "lint": "npm run prettier -- --check . && xo",
+    "prettierlint": "prettier --ignore-unknown \"**/*.!(js|jsx|mjs|cjs|ts|tsx|mts|cts)\"",
+    "jslint": "xo",
+    "xo:fix": "xo --fix",
+    "format": "npm run prettierlint -- --write . && npm run xo:fix",
+    "lint": "npm run prettierlint -- --check . && npm run jslint",
     "postinstall": "is-ci || husky install",
     "serve": "serve -p 8080 ./_site",
     "serve:watch": "run-p build:watch serve",
